removed controversial section, replaced ads block

--- a/client/views/calendar/calendar.html
+++ b/client/views/calendar/calendar.html
@@ -34,15 +34,22 @@
 	</div>
 
 	<div class="ui two column very relaxed stackable grid container">
+		<div class="eight wide column">
+			<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+			<!-- mainBlock -->
+			<ins class="adsbygoogle"
+			     style="display:block"
+			     data-ad-client="ca-pub-9916141306714493"
+			     data-ad-slot="5292875362"
+			     data-ad-format="auto"></ins>
+			<script>
+			(adsbygoogle = window.adsbygoogle || []).push({});
+			</script>
+		</div>
 	    <div class="eight wide column">
 	    	<h4 class="ui horizontal header divider"><span>About the Project</span></h4>
 		    <p>Click the +Google Calendar button above to add the entire Marvel lineup to your own personal Google calendar.</p>
 			<p>This calendar is updated regularily, but if you spot any mistakes please let me know at one of the contact options below.</p>
 	  	</div>
-		<div class="eight wide column">
-			<h4 class="ui horizontal header divider"><span>Why DC Sucks</span></h4>
-	    	<p>Everyone knows that Marvel is the best of the superhero movie studios. You've watched Elektra right? And Green Lantern? As much as I love Ryan Reynolds, there's really no saving that film. And Catwoman? Don't even start. DC movies are just awful. Even <a href="http://www.slashfilm.com/joss-whedons-theory-on-why-dc-comic-book-movies-usually-suck/">Joss Whedon thinks so</a>. Seriously, you can't argue with that. </p>
-	    	<p>For every dark and brooding DC movie, there's an upbeat and slightly off-kilter Marvel movie to match it. DC continues along churning out the same tired old formula, hoping they can create a Marvel-styled empire based on their own comics. Sorry. Stan Lee has you beat, every time.</p>
-		</div>
 	</div>
 </template>
