--- a/client/views/header/header.html
+++ b/client/views/header/header.html
@@ -4,7 +4,7 @@
 			<div class="ui large secondary inverted pointing menu">
 		        <a id="nav-cal" class="item">Calendar</a>
 		        <a id="nav-thelist" class="item">The Big List</a>
-		        <a id="nav-forum" class="item tooltip-popup" data-content="Coming Soon!">Forum</a>
+		        <!-- <a id="nav-forum" class="item tooltip-popup" data-content="Coming Soon!">Forum</a> -->
 		        <div class="right item">
 					<button class="ui inverted grey button" id="marvelbutton">Marvel</button>
 					<button class="tooltip-popup ui inverted grey button" data-content="Coming Soon (maybe)!">DC</button>
@@ -19,8 +19,8 @@
 		</div>
 
 	    <div class="ui text container">
-	      <h1 class="ui inverted header">Marvel Cinematic Universe Calendar</h1>
-	      <p>Your one-stop for Marvel Studios films and television</p>
+	      <h1 class="ui inverted header">Marvel Cinema (and beyond) Calendar</h1>
+	      <p>Your one-stop for Marvel films and television</p>
 	    </div>
 	</div>
 </template>
