--- a/client/views/forum/forum.html
+++ b/client/views/forum/forum.html
@@ -5,7 +5,15 @@
 				<div class="ui green labeled submit icon button" id="submit-new-post-button"><i class="icon edit"></i> Create New Post</div>  
 			</div>
 			<div class="content">
-				{{> quickForm collection="Posts" id="insertBookForm" type="insert" resetOnSuccess="true"}}
+
+				{{#autoForm collection="Posts" id="insertNewPostForm" type="insert" resetOnSuccess="true"}}
+					<fieldset>
+						{{> afQuickField name='title'}}
+						{{> afQuickField name='body'}}
+					</fieldset>
+					<button type="submit" class="btn btn-primary">Submit New Post</button>
+			 	{{/autoForm}}
+
 		    </div>
 		</div>
 		{{ #each posts }}
@@ -22,21 +30,19 @@
 		{{{ body }}}
 	</div>
 
-  <form class="ui form">
-    <div class="field" name="comment-name">
-      <textarea rows="2" placeholder="Enter your comment here..."></textarea>
-    </div>
-    <div class="ui blue labeled submit icon button">
-      <i class="icon edit"></i> Comment on {{ title }}
-    </div>
-  </form>
-
-
+	{{#autoForm collection="Comments" id="insertNewComment-{{ ../title }}" type="insert"}}
+		<legend>Reply to {{ title}}</legend>
+		<fieldset>
+			{{> afQuickField name='body' rows='2'}}
+			{{> afQuickField name='postId' value='{{ title }}' type='hidden'}}
+		</fieldset>
+		<button type="submit" class="btn btn-primary">Comment</button>
+ 	{{/autoForm}}
 	<div class="ui comments">
-	<h3 class="ui dividing header">Comments</h3>
-	{{ #each comments }}
-		{{> comment }}
-	{{ /each }}
+		<h3 class="ui dividing header">Comments</h3>
+		{{ #each comments }}
+			{{> comment }}
+		{{ /each }}
 	</div>
 	<div class="ui horizontal divider"></div>
 </template>
@@ -54,17 +60,6 @@
       </div>
       <div class="text">
         {{{body}}}
-      </div>
-      <div class="actions">
-        <a class="reply" id="{{_id}}">Reply</a>
-        <form class="ui form comment-reply-form">
-          <div class="field" name="comment-name">
-            <textarea rows="2"></textarea>
-          </div>
-          <div class="ui blue labeled submit icon button">
-            <i class="icon edit"></i> Add Reply
-          </div>
-        </form>
       </div>
     </div>
   </div>
