add a donate button, for justice

--- a/client/views/calendar/calendar.html
+++ b/client/views/calendar/calendar.html
@@ -35,21 +35,22 @@
 
 	<div class="ui two column very relaxed stackable grid container">
 		<div class="eight wide column">
-			<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-			<!-- mainBlock -->
-			<ins class="adsbygoogle"
-			     style="display:block"
-			     data-ad-client="ca-pub-9916141306714493"
-			     data-ad-slot="5292875362"
-			     data-ad-format="auto"></ins>
-			<script>
-			(adsbygoogle = window.adsbygoogle || []).push({});
-			</script>
+	    	<h4 class="ui horizontal header divider"><span>Donate a Beer</span></h4>
+			<p>If you copy this calendar to your own Google Calendar, or if you just don't hate this little page that I built, consider buying me a beer. It helps pay for the domain name, and keeping the data online. And also it pays for my beer.
+			</p>
+			<div class="ui centered item">
+			<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+				<input type="hidden" name="cmd" value="_s-xclick">
+				<input type="hidden" name="hosted_button_id" value="8S4FJKS4HZR6S">
+				<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+				<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+			</form>
+			</div>
 		</div>
 	    <div class="eight wide column">
 	    	<h4 class="ui horizontal header divider"><span>About the Project</span></h4>
 		    <p>Click the +Google Calendar button above to add the entire Marvel lineup to your own personal Google calendar.</p>
-			<p>This calendar is updated regularily, but if you spot any mistakes please let me know at one of the contact options below.</p>
+			<p>This calendar is updated regularly, but if you spot any mistakes please let me know at one of the contact options under my name in the footer below.</p>
 	  	</div>
 	</div>
 </template>
