--- a/client/views/thelist/thelist.html
+++ b/client/views/thelist/thelist.html
@@ -28,7 +28,9 @@
 				</div>
 			</div>
 		</div>
-		<img class="ui fluid dimmable image" src={{banner.url}}>
+		<img class="ui fluid dimmable image">
+		<div style="background: url('{{banner.url}}') no-repeat; background-size:cover; background-position: center; height: 150px;">
+		</div>
 	</div>
 	{{/if}}
 	<div class="content">
