fix theList to show banner images on tablet and mobile

--- a/client/views/thelist/thelist.html
+++ b/client/views/thelist/thelist.html
@@ -28,7 +28,7 @@
 				</div>
 			</div>
 		</div>
-		<img class="ui fluid dimmable image">
+		<img style="min-width: 350px !important;" class="ui fluid dimmable image">
 		<div style="background: url('{{banner.url}}') no-repeat; background-size:cover; background-position: center; height: 130px;">
 		</div>
 	</div>
@@ -46,7 +46,7 @@
 				{{#if estimatedDate}}
 					Estimated: {{estimatedDate}}
 				{{else}}
-					Unknown Date / Just a Rumour
+					Unknown Date or Just a Rumour
 				{{/if}}
 			{{/if}}
 			</span>
