--- a/client/views/footer/footer.html
+++ b/client/views/footer/footer.html
@@ -16,7 +16,7 @@
 					<p><a class="myname" href="http://michaelkant.com">michael kant</a></p>
 					<h2 style="margin-top: 0px;"><a href="mailto://contact@michaelkant.com"><i class="at icon"></i></a><a href="https://github.com/inconsiderate/mcu"><i class="github icon"></i></a><a href="https://twitter.com/michaelkant"><i class="twitter icon"></i></a><a href="https://www.linkedin.com/in/michaelkant"><i class="linkedin icon"></i></a></h2>
 			    </div>
-			    <div class="inverted center aligned column">
+			    <div class="inverted center aligned column computer only">
 			    	<h4>The Best Pasta</h4>
 			    	<div class="ui list">
 						<div class="item"><a href="http://marvel.com/characters/12/deadpool">Linguine</a></div>
