--- a/client/views/layout.css
+++ b/client/views/layout.css
@@ -32,9 +32,12 @@ a {
     margin-bottom: 4em;
 }
 
+.ui.inverted.vertical.footer.segment {
+    margin-top: 4em;
+}
+
 .ui.two.column.very.relaxed.grid {
     position: relative;
-    margin-bottom: 4em;
 }
 
 #marvelbutton {
