--- a/client/views/thelist/thelist.html
+++ b/client/views/thelist/thelist.html
@@ -1,5 +1,5 @@
 <template name="thelistpage">
-<div class="container">
+<div class="container" id="the-list-container">
 		<div class="ui divided items">	
 		{{#each allMovies}}
 			{{> listMovie}}
