--- a/client/views/header/header.html
+++ b/client/views/header/header.html
@@ -15,7 +15,7 @@
 			<div class="ui large secondary inverted pointing menu">
 		        <a id="nav-cal" class="item">Calendar</a>
 		        <a id="nav-thelist" class="item">The Big List</a>
-		        <!-- <a id="nav-forum" class="item tooltip-popup" data-content="Coming Soon!">Forum</a> -->
+		        <a id="nav-news" class="item">News</a>
 		        <div class="right item">
 					<button class="ui inverted grey button" id="marvelbutton">Marvel</button>
 					<button class="tooltip-popup ui inverted grey button" data-content="Coming Soon (maybe)!">DC</button>
