--- a/client/views/timeline/timeline.css
+++ b/client/views/timeline/timeline.css
@@ -123,27 +123,15 @@ header h1 {
   left: 0;
   width: 40px;
   height: 40px;
+}
+
+.cd-timeline-img.border {
   border-radius: 50%;
   box-shadow: 0 0 0 4px white, inset 0 2px 0 rgba(0, 0, 0, 0.08), 0 3px 0 4px rgba(0, 0, 0, 0.05);
 }
-.cd-timeline-img img {
-  display: block;
-  width: 24px;
-  height: 24px;
-  position: relative;
-  left: 50%;
-  top: 50%;
-  margin-left: -12px;
-  margin-top: -12px;
-}
+
 .cd-timeline-img.cd-picture {
   background: #FCFFFA;
-}
-.cd-timeline-img.cd-movie {
-  background: #c03b44;
-}
-.cd-timeline-img.cd-location {
-  background: #f0ca45;
 }
 @media only screen and (min-width: 1170px) {
   .cd-timeline-img {
