add some filtering for movie items in the timeline

--- a/client/views/timeline/timeline.html
+++ b/client/views/timeline/timeline.html
@@ -1,7 +1,15 @@
 
 <template name="timeline">
+	<div class="ui center aligned container">
+		<button class="ui button filter-button" data-filter-value='{}'>All Items</button>
+		<button class="ui button filter-button" data-filter-value='{"attributes": "featureFilm"}'>Movies</button>
+		<button class="ui button filter-button" data-filter-value='{"attributes": "tv"}'>TV</button>
+		<button class="ui button filter-button" data-filter-value='{"attributes": "mcu"}'>Official MCU</button>
+	<!-- 	<button class="filter-button" data-filter-title='animated' data-filter-value='{"attributes": "animated"}'>Animated</button>
+		<button class="filter-button" id="upcomingFilterButton">Upcoming</button> -->
+	</div>
 	<section id="cd-timeline" class="cd-container cssanimations">
-	{{#each timelineItems}}
+    {{#each filtered_movies}}
 		{{> timelineItem}}
 	{{/each}}
 	</section> <!-- cd-timeline -->
