add 'upcoming' filter for timeline

--- a/client/views/timeline/timeline.html
+++ b/client/views/timeline/timeline.html
@@ -5,6 +5,7 @@
 		<button class="ui button filter-button" data-filter-value='{"attributes": "featureFilm"}'>Movies</button>
 		<button class="ui button filter-button" data-filter-value='{"attributes": "tv"}'>TV</button>
 		<button class="ui button filter-button" data-filter-value='{"attributes": "mcu"}'>Official MCU</button>
+		<button class="ui button filter-button" data-filter-value='upcoming'>Upcoming</button>
 	<!-- 	<button class="filter-button" data-filter-title='animated' data-filter-value='{"attributes": "animated"}'>Animated</button>
 		<button class="filter-button" id="upcomingFilterButton">Upcoming</button> -->
 	</div>
