--- a/client/views/calendar/moviecard.html
+++ b/client/views/calendar/moviecard.html
@@ -25,7 +25,7 @@
 				{{title}}
 				</a>
 			</div>
-			<div class="meta">{{release}}</div>
+			<div class="meta">{{weeklyAiring}}</div>
 			<div class="center aligned description">
 				<p>{{{description}}}</p>
 			</div>
