--- a/client/views/calendar/calendar.html
+++ b/client/views/calendar/calendar.html
@@ -1,10 +1,17 @@
 <template name="calendarpage">
 
 	<div class="ui centered three column stackable relaxed grid container special cards">
-	<h4 class="ui horizontal header divider"><span>Now Playing</span></h4>		
-	{{#each currentCalendarMovies}}
-		{{> moviecard}}
-	{{/each}}
+        {{#if currentCalendarMovies}}
+            <h4 class="ui horizontal header divider"><span>Now Playing</span></h4>
+            {{#each currentCalendarMovies}}
+                {{> moviecard}}
+            {{/each}}
+            {{else}}
+            <h4 class="ui horizontal header divider"><span>Coming Up Next</span></h4>
+            {{#each nextUpCalendarMovies}}
+                {{> moviecard}}
+            {{/each}}
+        {{/if}}
 	</div>
 
 	<div class="ui centered stackable grid headline container">
@@ -12,7 +19,7 @@
 			<h4 class="ui horizontal header divider"><span>The Infamous Calendar</span></h4>
 	    	<div id="calendar"></div>
 			<div id="calendar-share-button">
-				<iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showDate=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;mode=AGENDA&amp;height=30&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=lh599j7okgva72o6um13nnemd4%40group.calendar.google.com&amp;color=%231B887A&amp;ctz=America%2FVancouver" style="border-width:0" width="145" height="30" frameborder="0" scrolling="no"></iframe>
+				Copy to your own Google Calendar <i class="arrow right icon"></i> <iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showDate=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;mode=AGENDA&amp;height=30&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=lh599j7okgva72o6um13nnemd4%40group.calendar.google.com&amp;color=%231B887A&amp;ctz=America%2FVancouver" style="border-width:0" width="145" height="30" frameborder="0" scrolling="no"></iframe>
 			</div>
 	    </div>
 	</div>
@@ -20,7 +27,7 @@
 	<div class="ui two column very relaxed stackable grid container">
 		<div class="eight wide column">
 	    	<h4 class="ui horizontal header divider"><span>Donate a Beer</span></h4>
-			<p>If you copy this calendar to your own Google Calendar, or if you just don't hate this little page that I built, consider buying me a beer. It helps pay for the domain name, and keeping the data online. And also it pays for my beer.
+			<p>If you copy this calendar to your own Google Calendar, consider donating a buck. It helps pay for the domain name, and keeping the data online. Also beer. The calendar will be kept up to date for so long as they keep making these shows. ;)
 			</p>
 			<div class="ui centered item">
 			<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
@@ -34,7 +41,7 @@
 	    <div class="eight wide column">
 	    	<h4 class="ui horizontal header divider"><span>About the Project</span></h4>
 		    <p>Click the +Google Calendar button above to add the entire Marvel lineup to your own personal Google calendar.</p>
-			<p>This calendar is updated regularly, but if you spot any mistakes please let me know at one of the contact options under my name in the footer below.</p>
+			<p>This calendar is updated regularly, but if you spot any mistakes please let me know at one of the contact options in the footer below.</p>
 	  	</div>
 	</div>
 </template>
