--- a/client/views/header/header.html
+++ b/client/views/header/header.html
@@ -14,7 +14,7 @@
 	    <div class="ui container">
 			<div class="ui large secondary inverted pointing menu">
 		        <a id="nav-cal" class="item">Calendar</a>
-		        <a id="nav-thelist" class="item">The Big List</a>
+		        <a id="nav-timeline" class="item">Timeline</a>
 		        <div class="right item">
 					<button class="ui inverted grey button" id="marvelbutton">Marvel</button>
 					<button class="tooltip-popup ui inverted grey button" data-content="Coming Soon (maybe)!">DC</button>
@@ -24,7 +24,7 @@
 
 		<div class="ui left vertical menu sidebar mobile only">
 	        <a class="active item">Calendar</a>
-	        <a class="item tooltip-popup" data-content="Coming Soon!">The Big List</a>
+	        <a class="item">Timeline</a>
 		</div>
 
 	    <div class="ui text container">
