--- a/client/views/layout.css
+++ b/client/views/layout.css
@@ -7,6 +7,11 @@ html, body {
     display: none;
 }
 
+.ui.checkbox {
+    margin-right: 20px;
+    margin-left: 20px;
+}
+
 #submit-new-post-button {
     margin-bottom: 25px;
 }
