fix selecting and deselecting of checkboxes on timeline

--- a/client/views/timeline/timeline.html
+++ b/client/views/timeline/timeline.html
@@ -1,20 +1,20 @@
 
 <template name="timeline">
 	<div class="ui center aligned container">Filter by:
- 		<div class="ui checkbox" id="masterbox">
+ 		<div class="ui checked checkbox" id="masterbox">
 			<input id="master-filter-button" type="checkbox">
 			<label for="master-filter-button">Show All</label>
 		</div>
- 		<div class="ui checked checkbox checkfilters">
-			<input id="movies-filter-button" type="checkbox">
+ 		<div class="ui checkbox checkfilters" id="movies-checkbox">
+			<input type="checkbox">
 			<label for="movies-filter-button">Movies</label>
 		</div>
-		<div class="ui checkbox checkfilters">
-			<input id="tv-filter-button" type="checkbox">
+		<div class="ui checkbox checkfilters" id="tv-checkbox">
+			<input type="checkbox">
 			<label for="tv-filter-button">TV</label>
 		</div>
-		<div class="ui checkbox checkfilters">
-			<input id="mcu-filter-button" type="checkbox">
+		<div class="ui checkbox checkfilters" id="mcu-checkbox">
+			<input type="checkbox">
 			<label for="mcu-filter-button">Official MCU</label>
 		</div>
 <!-- 		<div class="ui checkbox">
