--- a/client/views/footer/footer.html
+++ b/client/views/footer/footer.html
@@ -3,27 +3,27 @@
 		<p></p>
 			<div class="ui equal width stackable grid">
 			    <div class="inverted center aligned column">
-			    	<h4>Other Things I've Made</h4>
-			    	<div class="ui list">
-						<div class="item" data-html="<img class='small ui image' src='http://www.some-image.jpg'>"><a href="http://thescore.meteor.com/">theScore</a></div>
-						<div class="item" data-html="<img class='small ui image' src='http://www.some-image.jpg'>"><a href="https://chrome.google.com/webstore/detail/stream/jbkkjekaobelbhpknfmcjbobkdfajpok">Stream</a></div>
-						<div class="item" data-html="<img class='small ui image' src='http://www.some-image.jpg'>"><a href="https://www.instagram.com/p/BAbagW4sCq0/">Roasted Vegetables</a></div>
-						<div class="item" data-html="<img class='small ui image' src='http://www.some-image.jpg'>"><a href="https://calvin-chess.herokuapp.com">Calvin Chess</a></div>
-					</div>
+			    	<p>other things i've made</p>
+                    <div class="ui list">
+                        <div class="item" data-html="<img class='small ui image' src='http://www.some-image.jpg'>"><a href="http://thescore.meteor.com/">theScore</a></div>
+                        <div class="item" data-html="<img class='small ui image' src='http://www.some-image.jpg'>"><a href="http://bluegiraffecreamery.ca/">Blue Giraffe Creamery</a></div>
+                        <div class="item" data-html="<img class='small ui image' src='http://www.some-image.jpg'>"><a href="https://www.instagram.com/p/BAbagW4sCq0/">Roasted Vegetables</a></div>
+                        <div class="item" data-html="<img class='small ui image' src='http://www.some-image.jpg'>"><a href="https://calvin-chess.herokuapp.com">Calvin Chess</a></div>
+                    </div>
 			    </div>
 				<div class="inverted center aligned column">
-					<h4 class="ui center aligned inverted header">made with <i class="red heart icon"></i> and meteor by</h4>
+					<p class="ui center aligned inverted"><i class="code icon"></i> with <i class="red heart icon"></i> and meteor by</p>
 					<p><a class="myname" href="http://michaelkant.com">michael kant</a></p>
-					<h2 style="margin-top: 0px;"><a href="mailto://contact@michaelkant.com"><i class="at icon"></i></a><a href="https://github.com/inconsiderate/mcu"><i class="github icon"></i></a><a href="https://twitter.com/michaelkant"><i class="twitter icon"></i></a><a href="https://www.linkedin.com/in/michaelkant"><i class="linkedin icon"></i></a></h2>
+					<p style="margin-top: 0px;"><a href="mailto://contact@michaelkant.com"><i class="at icon"></i></a><a href="https://github.com/inconsiderate/mcu"><i class="github icon"></i></a><a href="https://twitter.com/michaelkant"><i class="twitter icon"></i></a><a href="https://www.linkedin.com/in/michaelkant"><i class="linkedin icon"></i></a></p>
 			    </div>
 			    <div class="inverted center aligned column computer only">
-			    	<h4>The Best Pasta</h4>
+			    	<p>some of the pastas i enjoy</p>
 			    	<div class="ui list">
 						<div class="item"><a href="http://marvel.com/characters/12/deadpool">Linguine</a></div>
 						<div class="item"><a href="http://marvel.com/characters/67/x-23">Penne</a></div>
 						<div class="item"><a href="http://marvel.com/characters/63/venom">Farfalle</a></div>
 						<div class="item"><a href="http://marvel.com/characters/24/hope">Dinosaur Shapes</a></div>
-					</div>			    	
+					</div>
 			    </div>
 		  	</div>
 	    	<div class="container"></div>
