--- a/client/views/timeline/timeline.html
+++ b/client/views/timeline/timeline.html
@@ -18,10 +18,17 @@
 			<label>Official MCU</label>
 		</div>
 
+        <div class="ui checkbox checkfilters" id="unconfirmed-checkbox">
+            <input type="checkbox">
+            <label>Unknown Dates</label>
+        </div>
+
         <div class="ui mini buttons">
-            <a class="ui button sort-order red" id="sort-timeline-asc-button">asc</a>
-            <div class="or"></div>
-            <a class="ui button sort-order" id="sort-timeline-desc-button">desc</a>
+            <a class="ui button sort-order" id="sort-timeline-chrono-button" style="display: none;">chronology</a>
+            <a class="ui button sort-order" id="sort-timeline-release-button">release date </a>
+            <div class="or" data-text=" & "></div>
+            <a class="ui button sort-ascending" id="sort-timeline-asc-button">ascending</a>
+            <a class="ui button sort-ascending" id="sort-timeline-desc-button" style="display: none;">descending</a>
         </div>
 
 	</div>
