rearrange filters to make more sense

--- a/client/views/timeline/timeline.html
+++ b/client/views/timeline/timeline.html
@@ -20,7 +20,7 @@
 
         <div class="ui checkbox checkfilters" id="unconfirmed-checkbox">
             <input type="checkbox">
-            <label>Unknown Dates</label>
+            <label>Known Dates</label>
         </div>
 
         <div class="ui mini buttons">
