adjust filters and sorting, for clarity

--- a/client/views/calendar/calendar.html
+++ b/client/views/calendar/calendar.html
@@ -7,12 +7,13 @@
                 {{> moviecard}}
             {{/each}}
         {{else}}
-            <h4 class="ui horizontal header divider"><span>Coming Up Next</span></h4>
+            <h4 class="ui horizontal header divider"><span>Next Up</span></h4>
             {{#each nextUpCalendarMovies}}
                 {{> moviecard}}
             {{/each}}
         {{/if}}
 	</div>
+
 
 	<div class="ui centered stackable grid headline container">
 		<div class="sixteen wide column">
