update header image and add blur

--- a/client/views/header/header.html
+++ b/client/views/header/header.html
@@ -10,27 +10,27 @@
 		ga('send', 'pageview');
 	</script>
 
-	<div class="ui inverted vertical masthead center aligned segment">
-	    <div class="ui container">
-			<div class="ui large secondary inverted pointing menu">
-		        <a id="nav-cal" class="item">Calendar</a>
-		        <a id="nav-timeline" class="item">Timeline</a>
-		        <div class="right item">
-					<button class="ui inverted grey button" id="marvelbutton">Marvel</button>
-					<button class="tooltip-popup ui inverted grey button" data-content="Coming Soon (maybe)!">DC</button>
-				</div>
-			</div>
-	    </div>
+    <div class="ui inverted vertical masthead center aligned segment">
+        <!--<img class="testing" src="marvel.jpg">-->
+        <div class="ui container">
+            <div class="ui large secondary inverted pointing menu">
+                <a id="nav-cal" class="item">Calendar</a>
+                <a id="nav-timeline" class="item">Timeline</a>
+                <div class="right item">
+                    <button class="ui inverted grey button" id="marvelbutton">Marvel</button>
+                    <button class="tooltip-popup ui inverted grey button" data-content="Coming Soon (maybe)!">DC</button>
+                </div>
+            </div>
+        </div>
 
-		<div class="ui left vertical menu sidebar mobile only">
-	        <a class="active item">Calendar</a>
-	        <a class="item">Timeline</a>
-		</div>
+        <div class="ui left vertical menu sidebar mobile only">
+            <a class="active item">Calendar</a>
+            <a class="item">Timeline</a>
+        </div>
 
-	    <div class="ui text container">
-	      <h1 class="ui inverted header">Marvel Cinema (and beyond) Calendar</h1>
-	      <p>Your one-stop for Marvel films and television</p>
-	    </div>
+        <div class="ui text container">
+            <h1 class="ui inverted header">The Definitive Marvel Cinema Calendar</h1>
+        </div>
 	</div>
 
 </template>
