--- a/client/views/footer/footer.html
+++ b/client/views/footer/footer.html
@@ -12,7 +12,7 @@
                     </div>
 			    </div>
 				<div class="inverted center aligned column">
-					<p class="ui center aligned inverted"><i class="code icon"></i> with <i class="red heart icon"></i> and meteor by</p>
+					<p class="ui center aligned inverted"><i class="code icon"></i> and <i class="red heart icon"></i> and meteor</p>
 					<p><a class="myname" href="http://michaelkant.com">michael kant</a></p>
 					<p style="margin-top: 0px;"><a href="mailto://contact@michaelkant.com"><i class="at icon"></i></a><a href="https://github.com/inconsiderate/mcu"><i class="github icon"></i></a><a href="https://twitter.com/michaelkant"><i class="twitter icon"></i></a><a href="https://www.linkedin.com/in/michaelkant"><i class="linkedin icon"></i></a></p>
 			    </div>
