change view order to show the in universe date instead of release date

--- a/client/views/timeline/newTimeline.html
+++ b/client/views/timeline/newTimeline.html
@@ -22,7 +22,7 @@
                 <thead>
                     <tr>
                         <th></th>
-                        <th class="six wide"></th>
+                        <th class="five wide"></th>
                         <th></th>
                         <th></th>
                     </tr>
@@ -47,7 +47,7 @@
                             {{{ description }}}
                         </td>
                         <td>
-                            {{ release }}
+                            {{ chronologyDate }}
                         </td>
                     </tr>
                 {{/each}}
