--- a/client/views/calendar/calendar.html
+++ b/client/views/calendar/calendar.html
@@ -1,11 +1,13 @@
 <template name="calendarpage">
 
+    <div class="ui container">
     {{#if currentCalendarMovies}}
         <h3 class="ui horizontal header divider"><span>Now Playing</span></h3>
     {{else}}
         <h3 class="ui horizontal header divider"><span>Next Up</span></h3>
     {{/if}}
-    <br/>
+    </div>
+    
 	<div class="ui centered three column stackable relaxed grid container special cards">
         {{#if currentCalendarMovies}}
             {{#each currentCalendarMovies}}
