change route of timeline to default to chrono

--- a/client/views/calendar/moviecard.html
+++ b/client/views/calendar/moviecard.html
@@ -16,6 +16,7 @@
 					</div>
 				</div>
 			</div>
+                    <!--BANNER SHOULD BE 600 x 400 px-->
 			<img class="ui fluid dimmable image" src={{banner.url}}>
 		</div>
 		<div class="left aligned content">
