--- a/client/views/calendar/calendar.html
+++ b/client/views/calendar/calendar.html
@@ -1,15 +1,15 @@
 <template name="calendarpage">
 	{{#if currentCalendarMovies }}
 	<div class="ui very relaxed stackable grid container">
-		<div class="ten wide column">
+		<div class="{{#if oneCurrentMovie}}eight{{ else }} ten {{/if}} wide column">
             <h3 class="ui horizontal header divider"><span>Now Playing</span></h3>
-	    	<div class="ui centered two column stackable relaxed grid container special cards">
+	    	<div class="ui centered stackable relaxed grid container special cards">
 		        {{#each currentCalendarMovies}}
 		            {{> moviecard}}
 		        {{/each}}
 			</div>
 		</div>
-		<div class="six wide column">
+		<div class="{{#if oneCurrentMovie}}eight{{ else }} six {{/if}} wide column">
 	        <h3 class="ui horizontal header divider"><span>Next Up</span></h3>
 	    	<div class="ui centered stackable relaxed grid container special cards">
 	            {{#each nextUpCalendarMovies}}
