--- a/client/views/header/header.html
+++ b/client/views/header/header.html
@@ -16,15 +16,19 @@
             <div class="ui large secondary inverted pointing menu">
                 <a id="nav-cal" class="item">calendar</a>
                 <a id="nav-timeline" class="item">timeline</a>
+<!--                 
                 <div class="right item">
                     <div class="three ui buttons">
                         <button class="ui inverted grey button" id="marvelbutton">marvel</button>
-                        <button class="ui inverted grey button" id="dcbutton">dc</button>
-                        <button class="ui inverted grey button" id="otherbutton">other</button>
+                        <button class="tooltip-popup ui inverted grey button" id="dcbutton" data-content="Coming Soon!" disabled>dc</button>
+                        <button class="tooltip-popup ui inverted grey button" id="otherbutton" data-content="Coming Soon!" disabled>other</button>
                     </div>
                 </div>
-            </div>
+ -->            
+ 
+ </div>
         </div>
+
 
         <div class="ui left vertical menu sidebar mobile only">
             <a class="active item">calendar</a>
