--- a/client/views/calendar/calendar.html
+++ b/client/views/calendar/calendar.html
@@ -11,9 +11,9 @@
 		</div>
 		<div class="{{#if oneCurrentMovie}}eight{{ else }} six {{/if}} wide column">
 	        <h3 class="ui horizontal header divider"><span>Next Up</span></h3>
-	    	<div class="ui centered stackable relaxed grid{{#if oneCurrentMovie}} two wide {{/if}} container special cards">
-	            {{#each nextUpCalendarMovies}}
-		        	{{> moviecard}}
+	        <div class="ui very relaxed divided list">
+				{{#each nextUpCalendarMovies}}
+		        	{{> nextUpMovieCard}}
 			    {{/each}}
 		    </div>
 	    </div>
