--- a/client/views/calendar/moviecard.html
+++ b/client/views/calendar/moviecard.html
@@ -1,53 +1,55 @@
 <template name="moviecard">
-	<div class="fluid card">
-		<div class="blurring dimmable image">
-			<div class="ui dimmer">
-				<div class="content">
-					<div class="center">
-					{{#if watchnow}}
-						<div class="ui inverted button"><a href={{watchnow}} target="_blank"><i class="video play outline icon"></i> Watch Now</a></div>
-					{{ else }}
-						{{ #if trailer }}
-						<div class="ui inverted button"><a href={{trailer}} target="_blank"><i class="video play outline icon"></i> Watch Trailer</a></div>
+	<div class="{{#if oneCurrentMovie }}sixteen{{ else }} eight {{/if}}wide column">
+		<div class="ui fluid card">
+			<div class="blurring dimmable image">
+				<div class="ui dimmer">
+					<div class="content">
+						<div class="center">
+						{{#if watchnow}}
+							<div class="ui inverted button"><a href={{watchnow}} target="_blank"><i class="video play outline icon"></i> Watch Now</a></div>
 						{{ else }}
-						<div>Media Not Available</div>
+							{{ #if trailer }}
+							<div class="ui inverted button"><a href={{trailer}} target="_blank"><i class="video play outline icon"></i> Watch Trailer</a></div>
+							{{ else }}
+							<div>Media Not Available</div>
+							{{/if}}
 						{{/if}}
-					{{/if}}
+						</div>
 					</div>
 				</div>
+	                    <!--BANNER SHOULD BE 600 x 400 px-->
+				<img class="ui fluid dimmable image" src={{banner.url}}>
 			</div>
-                    <!--BANNER SHOULD BE 600 x 400 px-->
-			<img class="ui fluid dimmable image" src={{banner.url}}>
-		</div>
-		<div class="left aligned content">
-			<img class="right floated avatar large ui image" src={{logo.url}}>
-			<div class="header">
-				<a href="../thelist#{{this._id}}">
-				{{title}}
-				</a>
+			<div class="left aligned content">
+				<img class="right floated avatar large ui image" src={{logo.url}}>
+				<div class="header">
+					<a href="../thelist#{{this._id}}">
+					{{title}}
+					</a>
+				</div>
+				<div class="meta">
+	                {{#if release}}
+	                    {{release}}
+	                {{else}}
+	                    {{#if estimatedDate}}
+	                        Estimated: {{estimatedDate}}
+	                    {{else}}
+	                        Unknown Date or Just a Rumour
+	                    {{/if}}
+	                {{/if}}
+	            </div>
+				<div class="center aligned description">
+					<p>{{{description}}}</p>
+				</div>
 			</div>
-			<div class="meta">
-                {{#if release}}
-                    {{release}}
-                {{else}}
-                    {{#if estimatedDate}}
-                        Estimated: {{estimatedDate}}
-                    {{else}}
-                        Unknown Date or Just a Rumour
-                    {{/if}}
-                {{/if}}
-            </div>
-			<div class="center aligned description">
-				<p>{{{description}}}</p>
+			<div class="extra content">
+				{{#if studio}}
+				<div class="ui bottom left floated item">{{studio}}</div>
+				{{/if}}
+				{{#if trakt}}
+				<div class="ui bottom right floated item"><a href={{trakt}} target="_blank">trakt<i class="right chevron icon"></i></a></div>
+				{{/if}}
 			</div>
-		</div>
-		<div class="extra content">
-			{{#if studio}}
-			<div class="ui bottom left floated item">{{studio}}</div>
-			{{/if}}
-			{{#if trakt}}
-			<div class="ui bottom right floated item"><a href={{trakt}} target="_blank">trakt<i class="right chevron icon"></i></a></div>
-			{{/if}}
 		</div>
 	</div>
 </template>
